# nb-vegetation

./: .gitignore  README.md  Step-01-Veggie-View.ipynb  Step-02-Veggie-Shadows.ipynb  Step-03-Veggie-Transport.ipynb  Step-04-Veggie-Forest.ipynb  Veggie-Forest.ipynb  Veggie-View.ipynb  environment.yml  pyproject.toml  requirements.txt
data/: image-bounds.geojson  pa_greatmarsh_2014_chm.tif.aux.xml  pa_greatmarsh_2014_dem.tif.aux.xml  pa_greatmarsh_2014_shd.tif  pa_greatmarsh_2014_shd.tif.aux.xml  pa_greatmarsh_2022_naip.tif.aux.xml  training-patches.fgb  training-patches.geojson
scripts/pdal-pipelines/: las2chm.ps1  las2dem.ps1  laz-tile-list.txt
