[project]
name = "nb-vegetation"
authors = [
  {name = "Michael Rahnis", email = "mike@topomatrix.com"},
]
description = "Wetland Vegetation Mapping"
dynamic = ["version"]
readme = "README.md"
keywords = ["vegetation", "segmentation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]

requires-python = ">=3.8"

dependencies = [
	"numpy",
	"matplotlib",
	"fiona",
	"shapely",
	"rasterio",
	"scikit-image",
	"scikit-learn",
	"pot",
	"jupyterlab",
	"notebook"
]


[project.urls]
Homepage = "https://topomatrix.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/mrahnis/nb-vegetation/nb-vegetation.git"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]
